--- a/app/views/director_templates/list.html.erb
+++ b/app/views/director_templates/list.html.erb
@@ -1,4 +1,4 @@
-<h1>List of directors</h1>
+<h1>List of all directors</h1>
 
 <table border="1">
   <tr>
@@ -13,7 +13,7 @@
     <tr>
       <td><%= this_director.id %></td>
       <td>
-        <img src = "<%= this_director.image %>" width = "400">
+        <img src = "<%= this_director.image %>" width = "200">
       </td>
       <td><%= this_director.name %></td>
       <td><%= this_director.dob %></td>
